--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,34 +1,44 @@
 version: 1.0.{build}
 
 environment:
-   matrix:
-      # Visual Studio 2013
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
-        SRC_FOLDER: Workspace
-        PROJECT_NAME: vs-tool.Build.CPPTasks.vs2013
-        SLN_NAME: vs-tool.vs2013.sln
-      # Visual Studio 2015
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-        SRC_FOLDER: Workspace
-        PROJECT_NAME: vs-tool.Build.CPPTasks.vs2015
-        SLN_NAME: vs-tool.vs2015.sln
-      # Visual Studio 2017
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-        SRC_FOLDER: Workspace
-        PROJECT_NAME: vs-tool.Build.CPPTasks.vs2017
-        SLN_NAME: vs-tool.vs2017.sln
+  matrix:
+    # Visual Studio 2010
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+      SRC_FOLDER: Workspace
+      PROJECT_NAME: vs-tool.Build.CPPTasks.vs2010
+      SLN_NAME: vs-tool.vs2010.sln
+    # Visual Studio 2012
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+      SRC_FOLDER: Workspace
+      PROJECT_NAME: vs-tool.Build.CPPTasks.vs2012
+      SLN_NAME: vs-tool.vs2012.sln
+    # Visual Studio 2013
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+      SRC_FOLDER: Workspace
+      PROJECT_NAME: vs-tool.Build.CPPTasks.vs2013
+      SLN_NAME: vs-tool.vs2013.sln
+    # Visual Studio 2015
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      SRC_FOLDER: Workspace
+      PROJECT_NAME: vs-tool.Build.CPPTasks.vs2015
+      SLN_NAME: vs-tool.vs2015.sln
+    # Visual Studio 2017
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      SRC_FOLDER: Workspace
+      PROJECT_NAME: vs-tool.Build.CPPTasks.vs2017
+      SLN_NAME: vs-tool.vs2017.sln
 
 configuration:
-   - Release
+  - Release
 
 install:
-   -
+  -
 
 before_build:
-   - nuget restore %SRC_FOLDER%\%SLN_NAME%
+  - nuget restore %SRC_FOLDER%\%SLN_NAME%
 
 build_script:
-   - msbuild %SLN_NAME% /t:%PROJECT_NAME% /p:configuration=Release
+  - msbuild Source\vs-tool.Build.CPPTasks\%PROJECT_NAME%.vcxproj /p:Platform="x86"
 
 after_test:
    -
