Test building with Emscripten by setting EMSCRIPTEN environment variable.

--- a/MSBuild/Emscripten/Emscripten.ToolPaths.props
+++ b/MSBuild/Emscripten/Emscripten.ToolPaths.props
@@ -3,7 +3,7 @@
     <!-- Present in ALL Emscripten builds, and use the '-Xclang -isystem' prefix. -->
     <ClangPath Condition="'$(ClangPath)' == ''">$(CLANG_BIN)</ClangPath>
     <MinGWPath Condition="'$(MinGWPath)' == ''">$(MINGW_BIN)</MinGWPath>
-    <EmccPath Condition="'$(EmccPath)' == ''">$(EMSCRIPTEN)</EmccPath>
+    <EmccPath Condition="!exists('$(EmccPath)\emsdk')">$(EMSCRIPTEN)</EmccPath>
     <NaclPath Condition="'$(NaclPath)' == ''">$(NACL_BIN)</NaclPath>
     <EmscriptenIncludeDir>$(EmccPath)\system\local\include;$(EmccPath)\system\include\compat;$(EmccPath)\system\include\libcxx;$(EmccPath)\system\include;$(EmccPath)\system\include\emscripten;$(EmccPath)\system\include\bsd;$(EmccPath)\system\include\libc;$(EmccPath)\system\include\gfx;$(EmccPath)\system\include\net;$(EmccPath)\system\include\SDL</EmscriptenIncludeDir>
     <ExecutablePath Condition="'$(ExecutablePath)' == '' and '$(PlatformToolset)' == 'emcc' ">$(ClangPath);$(EmccPath);$(PATH)</ExecutablePath>
