--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,13 @@
 version: 1.0.{build}
 
 environment:
-  EMSCRIPTEN_VERSION: 1.37.26
-  EMSCRIPTEN: c:\projects\vs-tool\emsdk\emscripten\1.37.26
-  CLANG_BIN: c:\projects\vs-tool\emsdk\clang\e1.37.26_64bit
+  ANDROID_HOME: "C:\\android-sdk-windows"
+  ANDROID_NDK_HOME: "C:\\android-sdk-windows\\ndk-bundle"
+  JAVA_HOME: "C:\\Program Files\\Java\\jdk1.8.0"
+  ANDROID_TOOLS_URL: "https://dl.google.com/android/repository/tools_r25.2.5-windows.zip"
+  EMSCRIPTEN_VERSION: 1.37.27
+  EMSCRIPTEN: c:\projects\vs-tool\emsdk\emscripten\1.37.27
+  CLANG_BIN: c:\projects\vs-tool\emsdk\clang\e1.37.27_64bit
   matrix:
     # Visual Studio 2010
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
@@ -29,12 +33,32 @@ environment:
 
 clone_folder: c:\projects\vs-tool
 
+init:
+  - mkdir %ANDROID_HOME%\licenses
+  - ps: 'Add-Content -Value "`n8933bad161af4178b1185d1a37fbf41ea5269c55`n`nd56f5187479451eabf01fb78af6dfcb131a6481e" -Path $env:ANDROID_HOME\licenses\android-sdk-license -Encoding ASCII'
+  - ps: 'Add-Content -Value "`n84831b9409646a918e30573bab4c9c91346d8abd`n504667f4c0de7af1a06de9f4b1727b84351f2910" -Path $env:ANDROID_HOME\licenses\android-sdk-preview-license -Encoding ASCII'
+  - ps: 'Add-Content -Value "`nd975f751698a77b662f1254ddbeed3901e976f5a" -Path $env:ANDROID_HOME\licenses\intel-android-extra-license -Encoding ASCII'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat licenses'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat tools'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat platform-tools'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat build-tools;25.0.0'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat platforms;android-25'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat extras;android;m2repository'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat --channel=1 ndk-bundle'
+  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat cmake;3.6.4111459'
+
+  # Download the Android SDK
+  - appveyor DownloadFile %ANDROID_TOOLS_URL% -FileName android-tools.zip
+  - 7z x android-tools.zip -o"%ANDROID_HOME%" > nul
+
+  # Download the Emscripten SDK
+  - ps: Start-FileDownload 'https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable-64bit.zip'
+  - cmd: 7z x emsdk-portable-64bit.zip -o%APPVEYOR_BUILD_FOLDER%\emsdk
+
 configuration:
   - Release
 
 install:
-  - ps: Start-FileDownload 'https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable-64bit.zip'
-  - cmd: 7z x emsdk-portable-64bit.zip -o%APPVEYOR_BUILD_FOLDER%\emsdk
   - cmd: emsdk\emsdk update
   - cmd: emsdk\emsdk install emscripten-%EMSCRIPTEN_VERSION%
   - cmd: emsdk\emsdk activate emscripten-%EMSCRIPTEN_VERSION%
