--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,8 +39,7 @@ init:
   - appveyor DownloadFile %ANDROID_TOOLS_URL% -FileName android-tools.zip
   - 7z x android-tools.zip -o"%ANDROID_HOME%" > nul
 
-  - cmd: 'FOR /L %i IN (1,1,10) DO ( ECHO y>>accept_all.txt )'
-  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat licenses < accept_all.txt'
+  - ps: for($i=0;$i -lt 30;$i++) { $response += "y`n"}; $response | %ANDROID_HOME%\tools\bin\sdkmanager --licenses
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat tools'
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat platform-tools'
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat build-tools;25.0.0'
