Move tools directory before updating it.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,7 +42,8 @@ init:
   - mkdir C:\Users\appveyor\.android
   - ps: 'New-Item C:\Users\appveyor\.android\repositories.cfg -type file'
   - ps: for($i=0;$i -lt 30;$i++) { $response += "y`n"}; $response | & $Env:ANDROID_HOME\tools\bin\sdkmanager --licenses
-  - '%ANDROID_HOME%\tools\bin\sdkmanager.bat tools'
+  - move '%ANDROID_HOME%\tools' %ANDROID_HOME%\old_tools'
+  - '%ANDROID_HOME%\old_tools\bin\sdkmanager.bat tools'
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat platform-tools'
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat build-tools;25.0.0'
   - '%ANDROID_HOME%\tools\bin\sdkmanager.bat platforms;android-25'
