Seems you have to manually specify LLVM_ROOT

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ environment:
   ANDROID_TOOLS_URL: "https://dl.google.com/android/repository/sdk-tools-windows-3859397.zip"
   EMSCRIPTEN_VERSION: 1.37.26
   EMSCRIPTEN: c:\emsdk\emscripten\1.37.26
+  LLVM_ROOT: c:\emsdk\clang\e1.37.26_64bit
   CLANG_BIN: c:\emsdk\clang\e1.37.26_64bit
   MINGW_BIN: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1
   matrix:
