--- a/Samples/android-hello-gl2/hello-gl2.vs2015.vcxproj
+++ b/Samples/android-hello-gl2/hello-gl2.vs2015.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Android">
       <Configuration>Debug</Configuration>
@@ -13,9 +13,10 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{158CCAFB-7A8D-4532-91DF-99284FCDABEA}</ProjectGuid>
     <RootNamespace>hellogl2</RootNamespace>
+    <VSToolRoot>$(ProjectDir)..\..\MSBuild</VSToolRoot>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(VSToolRoot)\Microsoft.Cpp.Default.props" />
+  <Import Project="$(VSToolRoot)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -48,7 +49,7 @@
     <None Include="AndroidApk\src\com\android\gl2jni\GL2JNILib.java" />
     <None Include="AndroidApk\src\com\android\gl2jni\GL2JNIView.java" />
   </ItemGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <Import Project="$(VSToolRoot)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
